- Fixed MOPS-2010-24, fix string validation. (CVE-2010-2950). (Pierre)
- Changed deprecated ini options on startup from E_WARNING to E_DEPRECATED. 
  (Kalle)
- Changed the $context parameter on copy() to actually have an effect. (Kalle)
- Fixed possible crash in mssql_fetch_batch(). (Kalle)
- Fixed inconsistent backlog default value (-1) in FPM on many systems. (fat)

- Fixed bug #52725 (gcc builtin atomic functions were sometimes used when they
  were not available). (fat)
- Fixed bug #52745 (Binding params doesn't work when selecting a date inside a
  CASE-WHEN). (Andrey)
- Fixed bug #52699 (PDO bindValue writes long int 32bit enum).
  (rein at basefarm dot no)
- Fixed bug #52681 (mb_send_mail() appends an extra MIME-Version header).
  (Adam)
- Fixed bug #52674 (FPM Status page returns inconsistent Content-Type headers).
  (fat)
- Fixed bug #52668 (Iterating over a dateperiod twice is broken). (Derick)
- Fixed bug #52654 (mysqli doesn't install headers with structures it uses).
  (Andrey)
- Fixed bug #52636 (php_mysql_fetch_hash writes long value into int). 
  (Kalle, rein at basefarm dot no)
- Fixed bug #52613 (crash in mysqlnd after hitting memory limit). (Andrey)
- Fixed bug #52599 (iconv output handler outputs incorrect content type
  when flags are used). (Ilia)
- Fixed bug #52573 (SplFileObject::fscanf Segmentation fault). (Felipe)
- Fixed bug #52546 (pdo_dblib segmentation fault when iterating MONEY values).
  (Felipe)
- Fixed bug #52534 (var_export array with negative key). (Felipe)
- Fixed bug #52508 (newline problem with parse_ini_file+INI_SCANNER_RAW).
  (Felipe)
- Fixed bug #52487 (PDO::FETCH_INTO leaks memory). (Felipe)
- Fixed bug #52484 (__set() ignores setting properties with empty names).
  (Felipe)
- Fixed bug #52468 (wddx_deserialize corrupts integer field value when left
  empty). (Felipe)
- Fixed bug #52454 (Relative dates and getTimestamp increments by one day).
  (Derick)
- Fixed bug #52436 (Compile error if systems do not have stdint.h)